# basic_chat_app

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  hello.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  anthropic_agent.py  base_agent.py  chat_harness.py  context_builders.py  harness_registry.py  openai_agent.py
docs/: PHASE 1 BACKLOG.md  PHASES.md  VISION.md
persistence/: __init__.py  db.py  repository.py
plans/: DESIGN.md  PARKING LOT.md  PHASE 1 BACKLOG.md  PHASE 2 BACKLOG.md  PHASE 2 DESIGN.md  PHASE 2 DONE.md  PHASE 3 BACKLOG.md  PHASE 3 DESIGN.md  PHASE 4 BACKLOG.md  PHASE 4 DESIGN.md  PHASES.md  TERMINOLOGY.md  VISION.md  openai-harness-adapter-migration.md  p3-01-chat-harness-contracts.md  p3-02-harness-registry-stable-binding.md  p3-04-context-builders-and-harness-owned-memory-assembly.md  p3-05-streaming-capable-harness-execution-surface.md  p3-06-tool-hook-and-capability-foundation.md  p3-07-control-layer-observability.md  p3-08-test-docs-forking-guidance-alignment.md  p3-09-anthropic-harness-proof.md  p4-02-session-metadata-and-inspectability-surface.md  session-model-and-persistence-groundwork.md
scripts/: install.sh  install_wrappers.sh  run.sh  update.sh
services/: __init__.py  chat_turns.py
templates/: index.html
tests/: conftest.py  test_anthropic_agent.py  test_chat_harness_contract.py  test_chat_repository.py  test_chat_turn_service.py  test_context_builders.py  test_diagnostics.py  test_harness_registry.py  test_html_formatter.py  test_logging_config.py  test_main_routes.py  (+3 more)
(+38 files in other folders)
