[project]
name = "basic-chat-app"
version = "0.1.0"
description = "A lightweight FastAPI + HTMX chat workbench for experimenting with OpenAI-backed chat flows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "openai>=2.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "playwright>=1.58.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
filterwarnings = [
    "error:The `name` is not the first parameter anymore.*:DeprecationWarning:starlette\\.templating",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
exclude = ["^tests/"]
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
